--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -1,4 +1,5 @@
-<!doctype html>
+<div>Dinosaurs</div>
+<!-- <!doctype html>
 <html data-ng-app="PaperPlane" data-ng-csp="">
   <head>
     <title>Paper Plane</title>
@@ -48,9 +49,5 @@
       </div>
       <button ng-click="createCitation(citation)">Create my citation</button>
     </div>
-    <script src="../../../../node_modules/angular/angular.min.js"></script>
-    <script src="../../../../node_modules/angular-ui-router/build/angular-ui-router.min.js"></script>
-    <script src="./popup.js"></script>
-     <script src="../../../../node_modules/angular-bootstrap/ui-bootstrap.min.js"></script>
   </body>
-</html>
+</html> -->
