--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -1,12 +1,7 @@
-<div>Dinosaurs</div>
-<!-- <!doctype html>
-<html data-ng-app="PaperPlane" data-ng-csp="">
-  <head>
-    <title>Paper Plane</title>
-  </head>
-  <body>
-    <h1>Paper Plane</h1>
-    <div ng-controller="MainCtrl">
+
+ <div id="paperPlane">
+     <link rel=stylesheet type="text/css" href="../styles/main.css">
+      <div class="text"><h1>Paper Plane</h1></div>
       <select ng-model="citation.source">
         <option value=''> Source </option>
         <option placeholder="source" value="mla7">Website</option>
@@ -48,6 +43,4 @@
         <p>{{citation}}</p>
       </div>
       <button ng-click="createCitation(citation)">Create my citation</button>
-    </div>
-  </body>
-</html> -->
+</div>
