create citation Ctrl

--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -1,5 +1,5 @@
 
- <div id="paperPlane">
+ <div id="paperPlane" ng-model="citation" ng-controller="citationCtrl">
      <link rel=stylesheet type="text/css" href="../styles/main.css">
       <div class="text"><h1>Paper Plane</h1></div>
       <select ng-model="citation.source">
