--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,14 +3,17 @@ body {
 }
 
 .text{
+  padding: 10px 0px 10px 0px;
   color: white;
 }
 
 #paperPlane{
-   background-color: #6371B7;
+   background-image: url("http://previews.123rf.com/images/photoauris/photoauris1110/photoauris111000004/11011469-high-resolution-seamless-cork-texture-Stock-Photo-wood.jpg");
+ /*  background-color: #6371B7;*/
    position: absolute; 
-   width: 20%;
-   height: 30%;
+   overflow: hidden;
+   width: 150px;
+   height: 400px;
    top: 50px;
    right: 5px;
    padding: 0px 20px 20px 20px;
