--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,8 +8,8 @@ body {
 }
 
 #paperPlane{
-   background-image: url("http://previews.123rf.com/images/photoauris/photoauris1110/photoauris111000004/11011469-high-resolution-seamless-cork-texture-Stock-Photo-wood.jpg");
- /*  background-color: #6371B7;*/
+   /*background-image: url("http://previews.123rf.com/images/photoauris/photoauris1110/photoauris111000004/11011469-high-resolution-seamless-cork-texture-Stock-Photo-wood.jpg");*/
+   background-color: #6371B7;
    position: absolute; 
    overflow: hidden;
    width: 150px;
