trying to add highlight functionality

--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -42,5 +42,6 @@
       <div>
         <p>{{citation}}</p>
       </div>
+      <button ng-click="highlight(true)">Start Highlight</button>
       <button ng-click="createCitation(citation)">Create my citation</button>
 </div>
