--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -17,7 +17,7 @@
         <option value="chicagob">Chicago</option>
         <option value="apa">APA</option>
       </select>
-      <input ng-model="citation.authors" placeholder="Author's Names separated by comma">
+    <!--   <input ng-model="citation.authors" placeholder="Author's Names separated by comma">
       </input>
       </input>
       <input ng-model="citation.editorName" placeholder="Editor's Names separated by comma">
@@ -38,10 +38,10 @@
       <input ng-model="citation.pages" placeholder="pages ex. 99-100">
       </input>
       <input ng-model="citation.volume" placeholder="If Journal, Enter volume">
-      </input>
+      </input> -->
       <div>
         <p>{{citation}}</p>
       </div>
-      <button ng-click="highlight(true)">Start Highlight</button>
+      <button ng-click="highlight()">Start Highlight</button>
       <button ng-click="createCitation(citation)">Create my citation</button>
 </div>
