--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -1,5 +1,5 @@
 
- <div id="paperPlane" ng-model="citation" ng-controller="citationCtrl">
+ <div id="paperPlane" ng-model="citation" ng-controller="MainCtrl">
      <link rel=stylesheet type="text/css" href="../styles/main.css">
       <div class="text"><h1>Paper Plane</h1></div>
       <select ng-model="citation.source">
@@ -17,9 +17,39 @@
         <option value="chicagob">Chicago</option>
         <option value="apa">APA</option>
       </select>
-    <!--   <input ng-model="citation.authors" placeholder="Author's Names separated by comma">
+      <div>
+        <p> Highlight the author </p> 
+        <p>{{aPage.highlighted}}</p>
+      </div>
+      <div> 
+        <p>Highlight the editor</p>
+        <p>{{aPage.highlighted}}</p>
+      </div>
+       <div> 
+        <p>Highlight the title</p>
+        <p>{{aPage.highlighted}}</p>
+      </div>
+      <div> 
+        <p>Highlight the journal title</p>
+        <p>{{aPage.highlighted}}</p>
+      </div>
+      <div> 
+        <p>Highlight the publisher</p>
+        <p>{{aPage.highlighted}}</p>
+      </div>
+      <div> 
+        <p>Highlight the date written</p>
+        <p>{{aPage.highlighted}}</p>
+      </div>
+      <div> 
+        <p>If Journal, Highlight Journal Volume</p>
+        <p>{{aPage.highlighted}}</p>
+      </div>
+      <input ng-model="citation.pages" placeholder="pages ex. 99-100">
       </input>
-      </input>
+      <!-- <input ng-model="citation.authors" placeholder="Author's Names separated by comma">
+      </input> -->
+     <!--  </input>
       <input ng-model="citation.editorName" placeholder="Editor's Names separated by comma">
       </input>
       <input ng-model="citation.title" placeholder="title">
@@ -39,9 +69,9 @@
       </input>
       <input ng-model="citation.volume" placeholder="If Journal, Enter volume">
       </input> -->
-      <div>
+      <!-- <div>
         <p>{{citation}}</p>
-      </div>
-      <button ng-click="highlight()">Start Highlight</button>
+      </div> -->
+      <!-- <button ng-click="highlight()">Start Highlight</button> -->
       <button ng-click="createCitation(citation)">Create my citation</button>
 </div>
