--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,12 +12,21 @@ body {
    background-color: #6371B7;
    position: absolute; 
    overflow: hidden;
-   width: 150px;
-   height: 800px;
+   width: 200px;
+   height: 600px;
    top: 50px;
    right: 5px;
    padding: 0px 20px 20px 20px;
 }
 
+.displayHighlight{
+  color: white;
+  font-size: 70%;
+  padding: 10px;
+}
 
 
+.btn{
+  margin-top: 10px;
+  padding: 10px;
+}
