--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -8,7 +8,7 @@
     <form name="citationForm" ng-submit="createCitation(citation)">
       <p>1. Choose source and style</p><select ng-change="sourceSelected(source)" ng-model="source" ng-required="true">
         <option value=''> Source* </option>
-        <option ng-repeat="(key, value) in sourceCategories" value={{key}}>{{key}}</option>
+        <option ng-repeat="(key, value) in sourceCategories" value="{{key}}">{{key}}</option>
       </select>
       <select ng-model="citation.style" ng-required="true">
         <option value=''> Style* </option>
