--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,8 +9,8 @@ body {
    position: absolute; 
    overflow-x: hidden;
    overflow-y: auto;
-   width: 200px;
-   height: 400px;
+   width: 250px;
+   height: 450px;
    top: 50px;
    right: 5px;
    margin-top: 80px;
@@ -32,6 +32,7 @@ body {
 
 .citationBtn{
   margin-top: 10px;
+  padding: 10px 0px 10px 0px;
   width: 20px;
 }
 
@@ -39,3 +40,4 @@ body {
   float: right;
   padding-bottom: 5px;
 }
+
