--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -21,7 +21,7 @@ body {
 .title{
   font-size: 20px;
   padding: 10px 0px 10px 0px;
-  color: white;
+  color: #8599A7;
 }
 .displayHighlight{
   color: white;
