--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,7 @@ body {
   padding: 20px;
 }
 
+
 #paperPlane{
    /*background-image: url("http://previews.123rf.com/images/photoauris/photoauris1110/photoauris111000004/11011469-high-resolution-seamless-cork-texture-Stock-Photo-wood.jpg");*/
    background-color: #2F373D;
@@ -29,6 +30,9 @@ body {
   padding: 10px;
 }
 
+.clearCitations{
+  margin-top:10px;
+}
 
 .citationBtn{
   margin-top: 10px;
