--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -42,7 +42,7 @@
     <form name="clipCitations" ng-submit="copyCitations()" ng-hide="clipCitations.$submitted">
      <input type="submit" class="btn btn-info btn-sm" value="Clip All Citations"></input>
     </form>
-    <div class="citationList" ng-show="clipCitations.$submitted" ng-hide="clearCitationsForm.$submitted">
+    <div class="citationList" ng-show="clipCitations.$submitted"
       <h3>Citations</h3>
         <ul>
           <div ng-repeat="clip in citationsClipped track by $index">
