arrows now work

--- a/app/templates/overlay.html
+++ b/app/templates/overlay.html
@@ -24,7 +24,7 @@
       <div ng-repeat="category in sourceCategories[source]" ng-show="current === $index">
         <p ng-hide="citationForm.$invalid">2. Highlight the {{category}}</p>
       </div>
-      <i ng-hide="citationForm.$invalid" class="fa fa-arrow-circle-o-left arrow-btn" ng-click="setCurrent($index-1)"></i><input size="15" ng-model="citation.pages" placeholder="pages ex. 99-100" ng-hide="citationForm.$invalid"><i ng-hide="citationForm.$invalid" class="fa fa-arrow-circle-o-right arrow-btn" ng-click="setCurrent($index+1)"></i>
+      <i ng-hide="citationForm.$invalid" class="fa fa-arrow-circle-o-left arrow-btn" ng-click="setCurrent(current - 1)"></i><input size="15" ng-model="citation.pages" placeholder="pages ex. 99-100" ng-hide="citationForm.$invalid"><i ng-hide="citationForm.$invalid" class="fa fa-arrow-circle-o-right arrow-btn" ng-click="setCurrent(current + 1)"></i>
       </input>
       <div class="citationBtn" ng-hide="citationForm.$invalid">
         <input type="submit" a class="btn btn-info btn-sm" value="Create My Citation" ng-hide="citationForm.$submitted" ></input>
